style.css
/* ... */
.showModal {
    opacity: 1;
    visibility: visible;
}

#modal {
    position: relative;
    height: 50vh;
    width: 50vh;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    background-color: var(--prim1);
    border-radius: 8px;
}

#modalForm {
    width: 100%;
    height: 70%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    background-color: var(--prim1);
    border-radius: 4px;
}

#modal h2 {
    font-size: 1.5em;
    width: 80%;
    text-align: left;
    color: var(--pinktext);

}

.modalInput {
    width: 80%;
    height: 10%;
    text-align: center;
    font-size: 1em;
    border-radius: 5px;
    border: none;
}

#modalMessage {
    height: fit-content;
    font-size: 1em;
}

#modalButton {
    height: 40px;
    width: 250px;
    background-color: var(--prim2);
    border-radius: 4px;
}

#modalButton:hover {
    transform: translateX(0px);
    transform: scale(1.1);
}

#closeModal {
    position: absolute;
    top: 20px;
    right: 25px;
    font-weight: bold;
    font-size: 2em;
    cursor: pointer;
    transform: scale(1.1);
}

/* Media Queries */

/* Tablet Size Responsiveness */

@media(min-width: 660px) and (max-width: 1024px) {

    #sidebar {
        width: 100vw;
        height: 150px;
        position: fixed;
        top: 0;
        left: 0;
        z-index: 4;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    #topContainer {
        height: 140px;
        width: 90%;
        display: grid;
        /* grid-template-columns: 80px, auto, auto, auto, 80px; */
        /* grid-template-rows: 80px, 60px; */
        grid-template-areas:
        "portrait intro intro intro intro"
        "navLinks navLinks navLinks navLinks navIcons";
        box-sizing: border-box;
        margin: 0px;
    }

    #portraitBox {
        grid-area: portrait;
    }

    #portrait {
        width: 70px;
        height: 75px;
    }

    #intro {
        grid-area: intro;
        padding-left: 10%;
        text-align: left;
    }

    #intro strong {
        font-size: 2.5vw;
    }

    #intro p {
        font-size: 2vw;
    }

    .largeScreen {
        display: none;
    }

    .smallScreen {
        display: inline-block;
    }

    #navIcons {
        grid-area: navIcons;
    }

    .navBox {
        padding: 0px;
        margin: 0px 5px;
    }

    .navIcon {
        height: 20px;
        width: 20px;
    }

    #navLinks {
        height: 30px;
        width: fit-content;
        grid-area: navLinks;
    }

    .link {
        /* padding: 2px 0px; */
        margin: 0px 5px;
        font-size: 1.5vw;
    }

    button:hover {
        transform: translateX(3px);
    }

    #navLinks ul {
        flex-direction: row;
        justify-items: center;
        height: 30px;
    }

    #bottomContainer {
        display: none;
    }

    #main {
        grid-template-columns: auto 0px;
        grid-template-rows: 150px auto;
        position: relative;
        top: 0;
        left: 0;
    }

    .window {
        height: 100%;
        width: 100%;
        position: absolute;
        top: 0;
        left: 0;
        grid-row-start: 1;
        grid-column-start: 1;
        }

    #sbBG {
        height: 155px;
        width: 101%;
        position: fixed;
        top: -5px;
        left:-1%;
        z-index: 3;
        overflow-y: scroll;
        overflow-x: hidden;
        -ms-overflow-style: none;
        scrollbar-width: none;
        background: transparent;
    }

    #gradientBG {
        height: 8000px;
        position: absolute;
        top: 0px;
        left: 0px;
        display: initial;
    }

    #sbBG::-webkit-scrollbar{
        display: none;
    }

    .wrapper {
        position: relative;
        grid-column-start: 1;
        grid-row-start: 2;
        top: 0;
        left: 0;
    }

    #showcase {
        height: 85vh;
    }

    .bgImage {
        height: 85vh;
        left: 0;
        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.6)), url(img/showcase.jpg);
        background-position: left;
    }

    #showcase h1{
     z-index: -1;
    }

    .sectionWrapper h3{
        display: none;
    }

    #eduArrowHead {
        top: -110px;
    }

    #eduArrow1 {
        top: -100px;

    }

    #fMHeader {
        display: initial;
    }

}

/* Skill Boxes Responsiveness */

@media screen and (min-width: 660px) and (max-width: 1300px) {

    #skill {
        grid-template-columns: repeat(2, 1fr);
        gap: 30px;
    }
}
/* ... */

